--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "beleaf",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A library for begonia miniprogram project state management.",
   "main": "dist/index.js",
-  "types": "index.d.ts",
+  "types": "types/index.d.ts",
   "scripts": {
     "build": "npx rollup -c",
     "test": "test"
